--- a/OIGH.ipynb
+++ b/OIGH.ipynb
@@ -1121,7 +1121,7 @@
     "def fast_reconstruction_loss(original_od_df: pd.DataFrame,\n",
     "                             od_matrix_generalized: pd.DataFrame) -> float:\n",
     "    \"\"\"\n",
-    "    reconstruction loss:\n",
+    "    reconstruction loss:first_seen\n",
     "    E = (1/V) * Σ |ṽ_o→d - v_o→d|\n",
     "    \"\"\"\n",
     "    \n",
