--- a/ODkAnon.ipynb
+++ b/ODkAnon.ipynb
@@ -53,21 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "8f5fb11c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_gps = pd.read_csv(\"C:\\\\Users\\\\dmc\\\\Desktop\\\\extracted_trips_data.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a74a8b0b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_gps = pd.read_csv(\"C:\\\\Users\\\\dmc\\\\Desktop\\\\extracted_trips_data.csv\")\n",
+    "\n",
     "df_people = pd.read_csv(\"C:\\\\Users\\\\dmc\\\\Desktop\\\\individuals_dataset.csv\")\n",
     "df_people = df_people[df_people['GPS_RECORD'] == True]"
    ]
@@ -187,6 +179,14 @@
    "metadata": {},
    "source": [
     "### ODkAnon algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20ebe57b",
+   "metadata": {},
+   "source": [
+    "##### Suppression phase"
    ]
   },
   {
@@ -317,6 +317,14 @@
     "    how='inner'\n",
     ")\n",
     "filtered_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db2dc393",
+   "metadata": {},
+   "source": [
+    "##### Hierarchical tree creation phase"
    ]
   },
   {
@@ -16721,6 +16729,14 @@
    ],
    "source": [
     "tree_end = create_h3_hierarchical_tree(od_matrix, target_resolution=10, hex_column='end_h3')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ce2b916",
+   "metadata": {},
+   "source": [
+    "##### Generalization phase"
    ]
   },
   {
