--- a/OIGH.ipynb
+++ b/OIGH.ipynb
@@ -48,7 +48,7 @@
    "id": "d3c989ce-bee1-4a32-94bf-936c752b7a75",
    "metadata": {},
    "source": [
-    "# Data Preparation"
+    "## Data Preparation"
    ]
   },
   {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "77062b70",
    "metadata": {},
    "outputs": [
@@ -114,21 +114,14 @@
     }
    ],
    "source": [
-    "#Keep only OD pairs within central paris area\n",
-    "\n",
-    "# Single hexagon for paris (res 5): \"851fb467fffffff\"\n",
-    "# 4 children hexagon covering central Paris (res=6): \"861fb4667ffffff\", \"861fb4677ffffff\", \"861fb466fffffff\", \"861fb4647ffffff\"\n",
-    "# res=7 \"871fb4674ffffff\", \"871fb475bffffff\", \"871fb4675ffffff\", \"871fb4666ffffff\", \"871fb4662ffffff\", \"871fb4660ffffff\"\n",
-    "# \"861fb4667ffffff\", \"861fb4677ffffff\", \"861fb466fffffff\", \"861fb4647ffffff\", \"861fb4297ffffff\", \"861fb474fffffff\", \"861fb475fffffff\", \"861fb462fffffff\"\n",
     "parent_hexes = [\"861fb4667ffffff\", \"861fb4677ffffff\", \"861fb466fffffff\", \"861fb4647ffffff\", \"861fb475fffffff\"]\n",
     "\n",
-    "# Generate the list of children at resolution 10\n",
     "target_resolution = 10\n",
     "start_valid_h3 = set()\n",
     "end_valid_h3 = set()\n",
     "\n",
     "for parent in parent_hexes:\n",
-    "    children = h3.cell_to_children(parent, target_resolution)  # <-- NON serve compact\n",
+    "    children = h3.cell_to_children(parent, target_resolution)\n",
     "    for child in children:\n",
     "        start_valid_h3.add(child)\n",
     "        end_valid_h3.add(child)\n",
@@ -142,153 +135,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "06e4c97c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "od_matrix = od_matrix_first.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "361830e2-e9e4-4370-944c-611fba7b7c94",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>start_h3</th>\n",
-       "      <th>end_h3</th>\n",
-       "      <th>total_weight</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>26453</th>\n",
-       "      <td>8a1fb4640007fff</td>\n",
-       "      <td>8a1fb4640d97fff</td>\n",
-       "      <td>5119.813757</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26454</th>\n",
-       "      <td>8a1fb4640007fff</td>\n",
-       "      <td>8a1fb4640db7fff</td>\n",
-       "      <td>2559.906878</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26456</th>\n",
-       "      <td>8a1fb464000ffff</td>\n",
-       "      <td>8a1fb464002ffff</td>\n",
-       "      <td>2559.906878</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26457</th>\n",
-       "      <td>8a1fb4640027fff</td>\n",
-       "      <td>8a1fb46402effff</td>\n",
-       "      <td>1894.922973</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26458</th>\n",
-       "      <td>8a1fb4640027fff</td>\n",
-       "      <td>8a1fb464465ffff</td>\n",
-       "      <td>1894.922973</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67971</th>\n",
-       "      <td>8a1fb475ed8ffff</td>\n",
-       "      <td>8a1fb475e4effff</td>\n",
-       "      <td>1194.230478</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67972</th>\n",
-       "      <td>8a1fb475ed8ffff</td>\n",
-       "      <td>8a1fb475ed9ffff</td>\n",
-       "      <td>414.022702</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67975</th>\n",
-       "      <td>8a1fb475ed9ffff</td>\n",
-       "      <td>8a1fb475ec27fff</td>\n",
-       "      <td>1194.230478</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67977</th>\n",
-       "      <td>8a1fb475eda7fff</td>\n",
-       "      <td>8a1fb47594f7fff</td>\n",
-       "      <td>1375.000372</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67978</th>\n",
-       "      <td>8a1fb475edb7fff</td>\n",
-       "      <td>8a1fb475eda7fff</td>\n",
-       "      <td>2626.017780</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>23264 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              start_h3           end_h3  total_weight  count\n",
-       "26453  8a1fb4640007fff  8a1fb4640d97fff   5119.813757      2\n",
-       "26454  8a1fb4640007fff  8a1fb4640db7fff   2559.906878      1\n",
-       "26456  8a1fb464000ffff  8a1fb464002ffff   2559.906878      1\n",
-       "26457  8a1fb4640027fff  8a1fb46402effff   1894.922973      1\n",
-       "26458  8a1fb4640027fff  8a1fb464465ffff   1894.922973      1\n",
-       "...                ...              ...           ...    ...\n",
-       "67971  8a1fb475ed8ffff  8a1fb475e4effff   1194.230478      1\n",
-       "67972  8a1fb475ed8ffff  8a1fb475ed9ffff    414.022702      1\n",
-       "67975  8a1fb475ed9ffff  8a1fb475ec27fff   1194.230478      1\n",
-       "67977  8a1fb475eda7fff  8a1fb47594f7fff   1375.000372      1\n",
-       "67978  8a1fb475edb7fff  8a1fb475eda7fff   2626.017780      1\n",
-       "\n",
-       "[23264 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "od_matrix = od_matrix_first.copy()\n",
     "od_matrix"
    ]
   },
@@ -382,15 +234,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "4334675b",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Lattice2DCount:\n",
     "    \"\"\"\n",
-    "    OIGH adattata per H3HierarchicalTree\n",
-    "    k-anonimita' basata su count, total_weight viene aggregato insieme\n",
+    "    OIGH adapted for H3HierarchicalTree\n",
     "    \"\"\"\n",
     "    def __init__(self, od_matrix, tree_start, tree_end, k, S):\n",
     "        self.od_matrix = od_matrix.copy()\n",
@@ -485,14 +336,12 @@
     "    def get_aggregation(self):\n",
     "        df = self.lattice.od_matrix.copy()\n",
     "\n",
-    "        # aggrega start e end\n",
     "        df['start_gen'] = df['start_h3'].apply(lambda h: self.map_to_level(h, self.lvlo, self.lattice.tree_start))\n",
     "        df['end_gen']   = df['end_h3'].apply(lambda h: self.map_to_level(h, self.lvld, self.lattice.tree_end))\n",
     "\n",
-    "        # aggrega count e total_weight\n",
     "        agg = df.groupby(['start_gen', 'end_gen']).agg({\n",
-    "            'count': 'sum',          # k-anonimity basata su count\n",
-    "            'total_weight': 'sum'    # aggregazione total_weight\n",
+    "            'count': 'sum',          \n",
+    "            'total_weight': 'sum'    \n",
     "        }).reset_index()\n",
     "\n",
     "        return agg\n",
@@ -529,133 +378,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "ea7ceb85",
    "metadata": {},
    "outputs": [],
    "source": [
-    "od_matrix_generalized = oigh(od_matrix, tree_start, tree_end, k=10, S=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "6a54ed5a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>start_gen</th>\n",
-       "      <th>end_gen</th>\n",
-       "      <th>count</th>\n",
-       "      <th>total_weight</th>\n",
-       "      <th>res_o</th>\n",
-       "      <th>res_d</th>\n",
-       "      <th>w_res_o</th>\n",
-       "      <th>w_res_d</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>841fb47ffffffff</td>\n",
-       "      <td>871fb4640ffffff</td>\n",
-       "      <td>342</td>\n",
-       "      <td>8.561037e+05</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1368</td>\n",
-       "      <td>2394</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>841fb47ffffffff</td>\n",
-       "      <td>871fb4641ffffff</td>\n",
-       "      <td>197</td>\n",
-       "      <td>4.224155e+05</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>788</td>\n",
-       "      <td>1379</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>841fb47ffffffff</td>\n",
-       "      <td>871fb4642ffffff</td>\n",
-       "      <td>183</td>\n",
-       "      <td>8.064748e+05</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>732</td>\n",
-       "      <td>1281</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>841fb47ffffffff</td>\n",
-       "      <td>871fb4643ffffff</td>\n",
-       "      <td>257</td>\n",
-       "      <td>7.561947e+05</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1028</td>\n",
-       "      <td>1799</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>841fb47ffffffff</td>\n",
-       "      <td>871fb4644ffffff</td>\n",
-       "      <td>2003</td>\n",
-       "      <td>5.125511e+06</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>8012</td>\n",
-       "      <td>14021</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         start_gen          end_gen  count  total_weight  res_o  res_d  \\\n",
-       "0  841fb47ffffffff  871fb4640ffffff    342  8.561037e+05      4      7   \n",
-       "1  841fb47ffffffff  871fb4641ffffff    197  4.224155e+05      4      7   \n",
-       "2  841fb47ffffffff  871fb4642ffffff    183  8.064748e+05      4      7   \n",
-       "3  841fb47ffffffff  871fb4643ffffff    257  7.561947e+05      4      7   \n",
-       "4  841fb47ffffffff  871fb4644ffffff   2003  5.125511e+06      4      7   \n",
-       "\n",
-       "   w_res_o  w_res_d  \n",
-       "0     1368     2394  \n",
-       "1      788     1379  \n",
-       "2      732     1281  \n",
-       "3     1028     1799  \n",
-       "4     8012    14021  "
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "od_matrix_generalized = oigh(od_matrix, tree_start, tree_end, k=10, S=0)\n",
     "od_matrix_generalized.head()"
    ]
   },
